Closed Bug 1553136 Opened 6 years ago Closed 6 years ago

Crash in [@ mozilla::layers::UiCompositorControllerChild::ProcessingError]

Categories

(Core :: Graphics: Layers, defect, P3)

Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox67 --- unaffected
firefox68 --- wontfix
firefox69 --- fixed

People

(Reporter: davidb, Assigned: rhunt)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-210997c4-a0a8-4693-abf0-f9a9b0190521.

Top 10 frames of crashing thread:

0 libxul.so mozilla::layers::UiCompositorControllerChild::ProcessingError gfx/layers/ipc/UiCompositorControllerChild.cpp:227
1 libxul.so mozilla::ipc::MessageChannel::MaybeHandleError ipc/glue/MessageChannel.cpp:2502
2 libxul.so mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2153
3 libxul.so mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:1968
4 libxul.so long long mozilla::jni::NativeStub<mozilla::java::GeckoThread::RunUiThreadCallback_t, GeckoThreadSupport, mozilla::jni::Args<> >::Wrap<&GeckoThreadSupport::RunUiThreadCallback> widget/android/jni/Natives.h:689
5 base.odex base.odex@0x43d4f 
6 dalvik-LinearAlloc (deleted) dalvik-LinearAlloc @0x641a 
7 dalvik-main space (region space) (deleted) dalvik-main space @0x81406 
8 dalvik-main space (region space) (deleted) dalvik-main space @0x25caeee 
9 dalvik-main space (region space) (deleted) dalvik-main space @0x260104e 

More here: https://crash-stats.mozilla.com/signature/?product=Fenix&signature=mozilla%3A%3Alayers%3A%3AUiCompositorControllerChild%3A%3AProcessingError

This is hitting an assert in UiCompositorControllerChild for a IPDL error.

Randall, you're the author of the assert, do you know if we need to be crashing for this?

Flags: needinfo?(rbarker)
Priority: -- → P3

It was copied from here:
https://searchfox.org/mozilla-central/rev/4606c7974a68cab416c038acaedcae49eed93822/gfx/layers/ipc/CompositorManagerChild.cpp#235

Which seems to have changed so it can probably be updated to match.

Flags: needinfo?(rbarker)

I'll try and take this.

Assignee: nobody → rhunt

This will make this site only crash in debug, nightly, or dev edition builds.

Pushed by rhunt@eqrion.net: https://hg.mozilla.org/integration/autoland/rev/cab2c0eaec74 Match CompositorManagerChild::ProcessingError behavior in UiCompositorControllerChild. r=rbarker
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69

Do we need to backport this for Beta for GV68?

Flags: needinfo?(rhunt)

I don't think this is an important fix? There's only a couple crashes with it. It would be a pretty easy uplift though (just a couple lines), so I'm not sure.

Flags: needinfo?(rhunt)

Any thoughts on this, Chris?

Flags: needinfo?(cpeterson)

(In reply to Ryan VanderMeulen [:RyanVM] from comment #9)

Any thoughts on this, Chris?

The crash volume is very low, so I don't think we need to uplift to GV 68 Beta.

Flags: needinfo?(cpeterson)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: