Bug 1553136 - Match CompositorManagerChild::ProcessingError behavior in UiCompositorControllerChild. r=rbarker

This will make this site only crash in debug, nightly, or dev edition builds.

Differential Revision: https://phabricator.services.mozilla.com/D32852